--- a/imgui.ini
+++ b/imgui.ini
@@ -53,8 +53,8 @@ Size=533,157
 Collapsed=0
 
 [Window][Scene]
-Pos=299,60
-Size=1219,771
+Pos=299,16
+Size=1219,759
 Collapsed=0
 DockId=0x00000021,0
 
@@ -105,7 +105,7 @@ Collapsed=0
 
 [Window][MainDockspace]
 Pos=0,0
-Size=1920,1055
+Size=1920,991
 Collapsed=0
 
 [Window][SecondDockSpace]
@@ -127,14 +127,14 @@ Size=1041,1055
 Collapsed=0
 
 [Window][Scene graph]
-Pos=24,68
-Size=265,377
+Pos=24,24
+Size=265,371
 Collapsed=0
 DockId=0x00000018,0
 
 [Window][Selected mesh]
-Pos=24,447
-Size=265,376
+Pos=24,397
+Size=265,370
 Collapsed=0
 DockId=0x00000016
 
@@ -144,50 +144,50 @@ Size=424,479
 Collapsed=0
 
 [Window][Scene infos]
-Pos=16,60
-Size=281,771
+Pos=16,16
+Size=281,759
 Collapsed=0
 DockId=0x0000001E,0
 
 [Window][Render infos]
-Pos=1544,30
-Size=368,357
+Pos=1544,8
+Size=368,342
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Light infos]
-Pos=1544,389
-Size=368,244
+Pos=1544,352
+Size=368,234
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Camera infos]
-Pos=1544,635
-Size=368,412
+Pos=1544,588
+Size=368,395
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Render dockspace]
 Pos=1536,0
-Size=384,1055
+Size=384,991
 Collapsed=0
 DockId=0x0000001D,0
 
 [Window][Console logs]
-Pos=8,841
-Size=1518,206
+Pos=8,785
+Size=1518,198
 Collapsed=0
 DockId=0x00000023,0
 
 [Window][Scene dockspace]
-Pos=8,30
-Size=1518,809
+Pos=8,8
+Size=1518,775
 Collapsed=0
 DockId=0x00000024,0
 
 [Window][Scene Console dockspace]
 Pos=0,0
-Size=1534,1055
+Size=1534,991
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -195,17 +195,17 @@ DockId=0x0000000E,0
 DockNode        ID=0x00000009 Pos=562,67 Size=387,1033 Split=Y
   DockNode      ID=0x0000001A Parent=0x00000009 SizeRef=387,603 Selected=0x875383EC
   DockNode      ID=0x0000001B Parent=0x00000009 SizeRef=387,428 Selected=0x81AED595
-DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=24,68 Size=265,755 Split=Y
+DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=24,24 Size=265,743 Split=Y
   DockNode      ID=0x00000015 Parent=0x5C52A707 SizeRef=0,32 Split=Y
     DockNode    ID=0x00000018 Parent=0x00000015 SizeRef=0,32 Selected=0xF5BE1C77
     DockNode    ID=0x00000019 Parent=0x00000015 SizeRef=0,32
   DockNode      ID=0x00000016 Parent=0x5C52A707 SizeRef=0,32 Selected=0x6DD25625
-DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,1055 Split=X
-  DockNode      ID=0x0000000E Parent=0x6E363A1D SizeRef=1534,1055 Selected=0xCB61E75E
+DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,991 Split=X
+  DockNode      ID=0x0000000E Parent=0x6E363A1D SizeRef=1534,1055 HiddenTabBar=1 Selected=0xCB61E75E
   DockNode      ID=0x00000011 Parent=0x6E363A1D SizeRef=384,1055 Split=X
     DockNode    ID=0x0000001C Parent=0x00000011 SizeRef=305,1055
-    DockNode    ID=0x0000001D Parent=0x00000011 SizeRef=77,1055 Selected=0xD0BC208B
-DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1544,30 Size=368,1017 Split=Y
+    DockNode    ID=0x0000001D Parent=0x00000011 SizeRef=77,1055 HiddenTabBar=1 Selected=0xD0BC208B
+DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1544,8 Size=368,975 Split=Y
   DockNode      ID=0x0000000A Parent=0x8673A6EC SizeRef=0,38 Split=Y
     DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=0,38 Split=Y
       DockNode  ID=0x00000014 Parent=0x00000012 SizeRef=0,12 Selected=0x3080C7DC
@@ -226,12 +226,12 @@ DockSpace       ID=0xA21CAF6A Pos=60,60 Size=32,32 Split=Y
       DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=0,52
     DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=0,10
   DockNode      ID=0x00000008 Parent=0xA21CAF6A SizeRef=0,10
-DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=8,30 Size=1518,1017 Split=Y
+DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=8,8 Size=1518,975 Split=Y
   DockNode      ID=0x00000022 Parent=0xB7B5E377 SizeRef=0,51 Split=Y
-    DockNode    ID=0x00000024 Parent=0x00000022 SizeRef=0,51 Selected=0x433EF69B
+    DockNode    ID=0x00000024 Parent=0x00000022 SizeRef=0,51 HiddenTabBar=1 Selected=0x433EF69B
     DockNode    ID=0x00000025 Parent=0x00000022 SizeRef=0,13
   DockNode      ID=0x00000023 Parent=0xB7B5E377 SizeRef=0,13 Selected=0xF14F0B90
-DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=16,60 Size=1502,771 Split=X
+DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=16,16 Size=1502,759 Split=X
   DockNode      ID=0x0000001E Parent=0xB8EF20DE SizeRef=12,0 Selected=0x367FCBD2
   DockNode      ID=0x0000001F Parent=0xB8EF20DE SizeRef=52,0 Split=X
     DockNode    ID=0x00000020 Parent=0x0000001F SizeRef=12,0
