--- a/imgui.ini
+++ b/imgui.ini
@@ -54,7 +54,7 @@ Collapsed=0
 
 [Window][Scene]
 Pos=307,22
-Size=1323,725
+Size=1323,773
 Collapsed=0
 DockId=0x00000021,0
 
@@ -105,7 +105,7 @@ Collapsed=0
 
 [Window][MainDockspace]
 Pos=0,0
-Size=1920,991
+Size=1920,1055
 Collapsed=0
 
 [Window][SecondDockSpace]
@@ -128,7 +128,7 @@ Collapsed=0
 
 [Window][Scene graph]
 Pos=8,30
-Size=289,709
+Size=289,378
 Collapsed=0
 DockId=0x00000018,0
 
@@ -145,49 +145,49 @@ Collapsed=0
 
 [Window][Scene infos]
 Pos=0,22
-Size=305,725
+Size=305,773
 Collapsed=0
 DockId=0x0000001E,0
 
 [Window][Render infos]
 Pos=1632,22
-Size=288,346
+Size=288,369
 Collapsed=0
 DockId=0x00000014,0
 
 [Window][Light infos]
-Pos=1632,370
-Size=288,231
+Pos=1632,393
+Size=288,247
 Collapsed=0
 DockId=0x00000013,0
 
 [Window][Camera infos]
-Pos=1632,603
-Size=288,388
+Pos=1632,642
+Size=288,413
 Collapsed=0
 DockId=0x0000000D,0
 
 [Window][Render dockspace]
 Pos=1632,0
-Size=288,991
+Size=288,1055
 Collapsed=0
 DockId=0x0000001D,0
 
 [Window][Console logs]
-Pos=0,749
-Size=1630,242
+Pos=0,797
+Size=1630,258
 Collapsed=0
 DockId=0x00000023,0
 
 [Window][Scene dockspace]
 Pos=0,22
-Size=1630,725
+Size=1630,773
 Collapsed=0
 DockId=0x00000024,0
 
 [Window][Scene Console dockspace]
 Pos=0,0
-Size=1630,991
+Size=1630,1055
 Collapsed=0
 DockId=0x0000000E,0
 
@@ -195,17 +195,17 @@ DockId=0x0000000E,0
 DockNode        ID=0x00000009 Pos=562,67 Size=387,1033 Split=Y
   DockNode      ID=0x0000001A Parent=0x00000009 SizeRef=387,603 Selected=0x875383EC
   DockNode      ID=0x0000001B Parent=0x00000009 SizeRef=387,428 Selected=0x81AED595
-DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=8,30 Size=289,709 Split=Y
+DockSpace       ID=0x5C52A707 Window=0x9554D0DC Pos=8,30 Size=289,757 Split=Y
   DockNode      ID=0x00000015 Parent=0x5C52A707 SizeRef=0,32 Split=Y
     DockNode    ID=0x00000018 Parent=0x00000015 SizeRef=0,32 Selected=0xF5BE1C77
     DockNode    ID=0x00000019 Parent=0x00000015 SizeRef=0,32
-  DockNode      ID=0x00000016 Parent=0x5C52A707 SizeRef=0,32
-DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,991 Split=X
+  DockNode      ID=0x00000016 Parent=0x5C52A707 SizeRef=0,32 Selected=0x6DD25625
+DockSpace       ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,1055 Split=X
   DockNode      ID=0x0000000E Parent=0x6E363A1D SizeRef=1630,1055 Selected=0xCB61E75E
   DockNode      ID=0x00000011 Parent=0x6E363A1D SizeRef=288,1055 Split=X
     DockNode    ID=0x0000001C Parent=0x00000011 SizeRef=243,1055
     DockNode    ID=0x0000001D Parent=0x00000011 SizeRef=43,1055 Selected=0xD0BC208B
-DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1632,22 Size=288,969 Split=Y
+DockSpace       ID=0x8673A6EC Window=0x3D6C39D8 Pos=1632,22 Size=288,1033 Split=Y
   DockNode      ID=0x0000000A Parent=0x8673A6EC SizeRef=1920,631 Split=Y
     DockNode    ID=0x00000012 Parent=0x0000000A SizeRef=1920,377 Split=Y
       DockNode  ID=0x00000014 Parent=0x00000012 SizeRef=1920,75 Selected=0x3080C7DC
@@ -226,12 +226,12 @@ DockSpace       ID=0xA21CAF6A Pos=60,60 Size=32,32 Split=Y
       DockNode  ID=0x00000010 Parent=0x0000000B SizeRef=0,52
     DockNode    ID=0x0000000C Parent=0x00000007 SizeRef=0,10
   DockNode      ID=0x00000008 Parent=0xA21CAF6A SizeRef=0,10
-DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=0,22 Size=1630,969 Split=Y
+DockSpace       ID=0xB7B5E377 Window=0x7EAA9075 Pos=0,22 Size=1630,1033 Split=Y
   DockNode      ID=0x00000022 Parent=0xB7B5E377 SizeRef=0,48 Split=Y
     DockNode    ID=0x00000024 Parent=0x00000022 SizeRef=0,57 Selected=0x433EF69B
     DockNode    ID=0x00000025 Parent=0x00000022 SizeRef=0,7
   DockNode      ID=0x00000023 Parent=0xB7B5E377 SizeRef=0,16 Selected=0xF14F0B90
-DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=0,22 Size=1630,725 Split=X
+DockSpace       ID=0xB8EF20DE Window=0x3B9335D6 Pos=0,22 Size=1630,773 Split=X
   DockNode      ID=0x0000001E Parent=0xB8EF20DE SizeRef=12,0 Selected=0x367FCBD2
   DockNode      ID=0x0000001F Parent=0xB8EF20DE SizeRef=52,0 Split=X
     DockNode    ID=0x00000020 Parent=0x0000001F SizeRef=12,0
