--- a/app/imgui.ini
+++ b/app/imgui.ini
@@ -14,7 +14,6 @@ Size=156,32
 Collapsed=0
 
 [Window][DockSpace]
-Pos=0,0
 Size=1920,1055
 Collapsed=0
 
@@ -23,7 +22,6 @@ Size=274,1055
 Collapsed=0
 
 [Window][Scene Graph]
-Pos=0,0
 Size=360,888
 Collapsed=0
 DockId=0x00000007,1
@@ -40,7 +38,6 @@ Collapsed=0
 DockId=0x00000004,0
 
 [Window][Camera info]
-Pos=0,0
 Size=360,888
 Collapsed=0
 DockId=0x00000007,0
@@ -54,10 +51,10 @@ Size=89,36
 Collapsed=0
 
 [Window][Scene]
-Pos=362,0
-Size=1558,888
+Pos=307,22
+Size=1323,773
 Collapsed=0
-DockId=0x00000006,0
+DockId=0x0000001A,0
 
 [Window][Light]
 Pos=384,741
@@ -79,8 +76,73 @@ Pos=0,480
 Size=360,408
 Collapsed=0
 
+[Window][Scene Console dockspace]
+Pos=0,0
+Size=1630,1055
+Collapsed=0
+DockId=0x00000009,0
+
+[Window][Render dockspace]
+Pos=1632,0
+Size=288,1055
+Collapsed=0
+DockId=0x0000000C,0
+
+[Window][Render infos]
+Pos=1632,22
+Size=288,369
+Collapsed=0
+DockId=0x00000011,0
+
+[Window][Camera infos]
+Pos=1632,642
+Size=288,413
+Collapsed=0
+DockId=0x0000000E,0
+
+[Window][Light infos]
+Pos=1632,393
+Size=288,247
+Collapsed=0
+DockId=0x00000010,0
+
+[Window][Scene dockspace]
+Pos=0,22
+Size=1630,773
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][Console logs]
+Pos=0,797
+Size=1630,258
+Collapsed=0
+DockId=0x00000014,0
+
+[Window][Scene infos]
+Pos=0,22
+Size=305,773
+Collapsed=0
+DockId=0x00000017,0
+
+[Window][Scene graph]
+Pos=8,30
+Size=289,378
+Collapsed=0
+DockId=0x0000001D,0
+
+[Window][Selected mesh]
+Pos=8,410
+Size=289,377
+Collapsed=0
+DockId=0x0000001C
+
+[Window][MainDockspace]
+Pos=0,0
+Size=1920,1055
+Collapsed=0
+
 [Docking][Data]
-DockSpace         ID=0x578CAA54 Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
+DockSpace         ID=0x578CAA54 Pos=0,0 Size=1920,1055 Split=Y
   DockNode        ID=0x00000001 Parent=0x578CAA54 SizeRef=0,12
   DockNode        ID=0x00000002 Parent=0x578CAA54 SizeRef=0,52 Split=Y
     DockNode      ID=0x00000003 Parent=0x00000002 SizeRef=0,54 Split=X
@@ -89,4 +151,31 @@ DockSpace         ID=0x578CAA54 Window=0x9A404470 Pos=0,0 Size=1920,1055 Split=Y
         DockNode  ID=0x00000008 Parent=0x00000005 SizeRef=52,0
       DockNode    ID=0x00000006 Parent=0x00000003 SizeRef=52,0 Selected=0xE192E354
     DockNode      ID=0x00000004 Parent=0x00000002 SizeRef=0,10 Selected=0x49278EEE
+DockSpace         ID=0x5C52A707 Window=0x9554D0DC Pos=8,30 Size=289,757 Split=Y
+  DockNode        ID=0x0000001B Parent=0x5C52A707 SizeRef=0,32 Split=Y
+    DockNode      ID=0x0000001D Parent=0x0000001B SizeRef=0,32 Selected=0xF5BE1C77
+    DockNode      ID=0x0000001E Parent=0x0000001B SizeRef=0,32
+  DockNode        ID=0x0000001C Parent=0x5C52A707 SizeRef=0,32 Selected=0x6DD25625
+DockSpace         ID=0x6E363A1D Window=0x1F1D7494 Pos=0,0 Size=1920,1055 Split=X
+  DockNode        ID=0x00000009 Parent=0x6E363A1D SizeRef=1630,1055 Selected=0xCB61E75E
+  DockNode        ID=0x0000000A Parent=0x6E363A1D SizeRef=288,1055 Split=X
+    DockNode      ID=0x0000000B Parent=0x0000000A SizeRef=243,1055
+    DockNode      ID=0x0000000C Parent=0x0000000A SizeRef=43,1055 Selected=0xD0BC208B
+DockSpace         ID=0x8673A6EC Window=0x3D6C39D8 Pos=1632,22 Size=288,1033 Split=Y
+  DockNode        ID=0x0000000D Parent=0x8673A6EC SizeRef=1920,631 Split=Y
+    DockNode      ID=0x0000000F Parent=0x0000000D SizeRef=1920,377 Split=Y
+      DockNode    ID=0x00000011 Parent=0x0000000F SizeRef=1920,75 Selected=0x3080C7DC
+      DockNode    ID=0x00000012 Parent=0x0000000F SizeRef=1920,300
+    DockNode      ID=0x00000010 Parent=0x0000000D SizeRef=1920,252 Selected=0x14BB463B
+  DockNode        ID=0x0000000E Parent=0x8673A6EC SizeRef=1920,422 Selected=0x1CD05757
+DockSpace         ID=0xB7B5E377 Window=0x7EAA9075 Pos=0,22 Size=1630,1033 Split=Y
+  DockNode        ID=0x00000013 Parent=0xB7B5E377 SizeRef=0,48 Split=Y
+    DockNode      ID=0x00000015 Parent=0x00000013 SizeRef=0,57 Selected=0x433EF69B
+    DockNode      ID=0x00000016 Parent=0x00000013 SizeRef=0,7
+  DockNode        ID=0x00000014 Parent=0xB7B5E377 SizeRef=0,16 Selected=0xF14F0B90
+DockSpace         ID=0xB8EF20DE Window=0x3B9335D6 Pos=0,22 Size=1630,773 Split=X
+  DockNode        ID=0x00000017 Parent=0xB8EF20DE SizeRef=12,0 Selected=0x367FCBD2
+  DockNode        ID=0x00000018 Parent=0xB8EF20DE SizeRef=52,0 Split=X
+    DockNode      ID=0x00000019 Parent=0x00000018 SizeRef=12,0
+    DockNode      ID=0x0000001A Parent=0x00000018 SizeRef=52,0 Selected=0xE192E354
 
